--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ quote = "1"
 [dependencies]
 clap = { version = "4.4", features = ["cargo", "derive"], optional = true }
 itertools = { version = ">=0.11", default-features = false }
-rand = { version = "0.9.0", default-features = false }
+rand = { version = "0.9.0", default-features = false, features = ["thread_rng", "std_rng"] }
 
 [package.metadata.docs.rs]
 # Limit docs.rs builds to a single tier one target, because they're identical on
